@@ -25,7 +25,7 @@
 
   <groupId>com.google.cloud.bigdataoss</groupId>
   <artifactId>bigdataoss-parent</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <url>https://github.com/GoogleCloudDataproc/hadoop-connectors</url>
@@ -61,21 +61,21 @@
   <properties>
     <argLine/>
 
-    <build.java.source.version>11</build.java.source.version>
-    <build.java.target.version>11</build.java.target.version>
+    <build.java.source.version>17</build.java.source.version>
+    <build.java.target.version>17</build.java.target.version>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <gpg.skip>true</gpg.skip>
 
-    <bigdataoss.version>3.0.0-SNAPSHOT</bigdataoss.version>
+    <bigdataoss.version>4.0.0-SNAPSHOT</bigdataoss.version>
 
     <google.auto-value.version>1.10.4</google.auto-value.version>
     <google.cloud.library.bom.version>26.69.0</google.cloud.library.bom.version>
     <google.error-prone.version>2.16</google.error-prone.version>
     <google.error-prone-annotations.version>2.38.0</google.error-prone-annotations.version>
     <google.flogger.version>0.7.4</google.flogger.version>
-    <google.guava.version>33.1.0-jre</google.guava.version>
+    <google.guava.version>33.4.8-jre</google.guava.version>
     <google.java-format.version>1.15.0</google.java-format.version>
     <hadoop.version>3.4.2</hadoop.version>
     <opencensus.version>0.31.1</opencensus.version>
@@ -89,6 +89,7 @@
     <assertj.version>3.14.0</assertj.version>
     <deploy.skip>true</deploy.skip>
     <central.publishing.skip>false</central.publishing.skip>
+    <java.addopens.args>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</java.addopens.args>
   </properties>
 
   <modules>
@@ -126,7 +127,7 @@
               </includes>
               <reuseForks>false</reuseForks>
               <forkCount>4</forkCount>
-              <argLine>-Xmx2g @{argLine}</argLine>
+              <argLine>-Xmx2g ${java.addopens.args} @{argLine}</argLine>
               <reportNameSuffix>sponge_log</reportNameSuffix>
             </configuration>
           </plugin>
@@ -200,6 +201,10 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
+                <configuration>
+                  <doclint>none</doclint>
+                  <failOnError>false</failOnError>
+                </configuration>
               </execution>
             </executions>
           </plugin>
